songlist-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: songlist-app
  labels:
    app: songlist
    tier: web
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: web
  template:
    metadata:
      labels:
        app: songlist
        tier: web
    spec:
      volumes:
        - name: vault-token
          emptyDir:
            medium: Memory
            sizeLimit: 1Mi
      containers:
      - name: songlist
        image: "registry:5000/songlist:1.22.0"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: vault-token
          mountPath: "/var/tmp/vault"
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "384Mi"
            cpu: "500m" # 0.5 CPU
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8444
          timeoutSeconds: 60
          #          initialDelaySeconds: 60
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8444
          timeoutSeconds: 3
          initialDelaySeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: songlist-service
spec:
  selector:
    app: songlist
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8444
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: songlist-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: songlist.cloud.lavacro.net
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: songlist-service
            port:
              number: 80
